# monux

./: AGENTS.md  Cargo.toml  PLAN.md  README-CRATES.md  README.md  build.rs  client.sh  install.sh  local-client.sh  local-server.sh  server.sh
examples/: clipboard.rs  clipboard_smoke.rs  devices.rs  enter_probe.rs  mdns_probe.rs  uinput.rs  wclipboard.rs  x11clipboard.rs
src/: approval.rs  autoupdate.rs  bulkmsgs.rs  certs.rs  client.rs  control.rs  deviceinput.rs  deviceoutput.rs  deviceutil.rs  devicewatch.rs  discovery.rs  edge.rs  lib.rs  logging.rs  main.rs  messages.rs  notify.rs  rotation.rs  server.rs  setup.rs  single_instance.rs  transport.rs  uninstall.rs  update.rs  wg.rs
src/clipboard/: client.rs  convert.rs  data.rs  mod.rs  server.rs
src/clipboard/wayland/: common.rs  data_control.rs  mod.rs  reader.rs  state.rs  type_watcher.rs  writer.rs
src/clipboard/x11/: events.rs  mod.rs  reader.rs  shared.rs  type_watcher.rs  writer.rs
src/device/: handles.rs  input.rs  mod.rs  output.rs  shortcut.rs  util.rs  watch.rs
src/device/output/: gadget.rs  mod.rs  uinput.rs
src/msgs/: bulk.rs  event.rs  mod.rs  shared.rs
src/network/: approval.rs  certs.rs  link_quality.rs  mod.rs  throttle.rs  transport.rs
src/x11clipboard/: convert.rs  limited_cursor.rs  mod.rs  reader.rs  shared.rs  writer.rs
