[package]
name = "nikau"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "1.5"
async-std = { version = "1.8", features = ["tokio1"] }
base64 = "0.21"
bit-vec = "0.6"
# waiting on fix in 0.5.2: https://github.com/cloudflare/boringtun/issues/340
boringtun = { git = "https://github.com/cloudflare/boringtun.git", rev = "878385f1" }
clap = { version = "4.0", features = ["derive", "env"] }
evdev = { version = "0.12", features = ["tokio"] }
futures = "0.3"
notify = "6.0"
rkyv = { version = "0.7", features = ["validation"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }