[package]
name = "nikau"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-channel = "1.5"
async-lock = "2.5"
async-std = { version = "1.8", features = ["tokio1"] }
bit-vec = "0.6"
bytes = "1.0"
clap = "4.0"
evdev = { version = "0.12", features = ["tokio"] }
futures = "0.3"
home = "0.5"
input-linux = "0.6"
libc = "0.2"
notify = "6.0"
pem = "2.0"
postcard = "1.0"
quinn = { version = "0.10", default-features = false, features = ["tls-rustls", "runtime-async-std", "log"]}
rcgen = "0.11"
# dangerous_configuration: Required for custom ServerCertVerifier
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
serde = { version = "1.0", default-features = false }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
